// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = ".;lab2";

package lab2;

// The greeting service definition.
service Greeter {
    // Sends a chunk
    rpc ReceiveChunk (StoreRequest) returns (StoreReply) {}
}

// The request message containing the chunk's name and clientName.
message StoreRequest {
    int32 chunkPart = 1;
    string fileName = 2;
    string clientName = 3;
    string chunk = 4;
    int32 part = 5;
}

// The response message containing the action
message StoreReply {
    string message = 1;
}
